First draft version

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ AssignmentInstructions.md
 notes.txt
 getdata_projectfiles_UCI_HAR_Dataset.zip
 UCI HAR Dataset/
+Codebook.html
+README.html
+column-names.txt
